--- a/RwaApartments-Public/Views/Shared/_Layout.cshtml
+++ b/RwaApartments-Public/Views/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
         <div class="container-fluid">
             <div class="navbar-brand">
                 <img src="~/Content/images/apartment.png" alt="logo" style="height: 2rem; width: 2rem; margin-right:.5rem" />
-                @Html.ActionLink("RWA Apartments", "Apartments", "BrowseApartments", null, new { @class = "navbar-brand white_link" })
+                @Html.ActionLink("RWA Apartments", "BrowseApartments", "Apartments", null, new { @class = "navbar-brand white_link" })
             </div>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="">
                 <span class="navbar-toggler-icon">
@@ -22,15 +22,15 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        @Html.ActionLink("Apartments", "BrowseApartments", "Apartments", null, new { @class = "nav-link white_link" })
-                    </li>
                     @if (HttpContext.Current.User.Identity.Name == "")
                     {
                         <li class="nav-item">
                             @Html.ActionLink("Login", "Index", "Apartments", null, new { @class = "nav-link" })
                         </li>
                     }
+                    <li class="nav-item">
+                        @Html.ActionLink("Apartments", "BrowseApartments", "Apartments", null, new { @class = "nav-link white_link" })
+                    </li>
                 </ul>
                 <ul class='navbar-nav d-flex'>
                     @if (HttpContext.Current.User.Identity.Name != "")
