--- a/RwaApartments-Public/Content/custom-styling.css
+++ b/RwaApartments-Public/Content/custom-styling.css
@@ -1,6 +1,19 @@
-﻿
-a{
+﻿a{
     text-decoration: none;
+}
+
+#popup_login {
+    padding: 0;
+    border-radius: .6em;
+    background-color: white;
+    overflow: hidden;
+    width: 500px;
+    position: absolute;
+    left: 15vw;
+    right: 15vw;
+    top: 10em;
+    z-index: 1000;
+    box-shadow: 10px 10px 37px -7px rgba(168,168,168,1);
 }
 
 form {
