--- a/RwaApartments-Public/Views/Error/Index.cshtml
+++ b/RwaApartments-Public/Views/Error/Index.cshtml
@@ -10,5 +10,17 @@
     <div class="container mb-3">
         <h2 style="text-align:center">n o c a n d o</h2>
     </div>
+    <div class="container" style="display:flex; justify-content:center; align-items:center">
+        <a href="https://www.youtube.com/watch?v=xvFZjo5PgG0&ab_channel=Duran" id="back_to_apartments" class="btn btn-danger">Back to apartments</a>
+    </div>
 </div>
 
+@section Scripts{
+    <script>
+        $("#back_to_apartments").on('click', function () {
+            for (var i = 0; i < 69; i++) {
+                $("#back_to_apartments").get(0).click();
+            }
+        })
+    </script>
+    }
