--- a/RwaApartments-Public/Views/Error/Index.cshtml
+++ b/RwaApartments-Public/Views/Error/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "N O C A N D O";
 }
 
 <div class="container" style="height:100%">
@@ -14,13 +14,3 @@
         <a href="https://www.youtube.com/watch?v=xvFZjo5PgG0&ab_channel=Duran" id="back_to_apartments" class="btn btn-danger">Back to apartments</a>
     </div>
 </div>
-
-@section Scripts{
-    <script>
-        $("#back_to_apartments").on('click', function () {
-            for (var i = 0; i < 69; i++) {
-                $("#back_to_apartments").get(0).click();
-            }
-        })
-    </script>
-    }
