Added registration page

--- a/RwaApartments-Public/Views/Apartments/Index.cshtml
+++ b/RwaApartments-Public/Views/Apartments/Index.cshtml
@@ -29,6 +29,9 @@
             <div class="mb-3">
                 <button type="submit" class="btn btn-success" style="width: 100%">Login</button>
             </div>
+            <div class="mb-3" style="display:flex; justify-content: center; align-items:center">
+                @Html.ActionLink("Don't have an account? Register here", actionName: "Register", controllerName: "Apartments")
+            </div>
         </div>
     }
 </div>
