--- a/RwaApartments-Public/Content/custom-styling.css
+++ b/RwaApartments-Public/Content/custom-styling.css
@@ -108,11 +108,21 @@ form {
     background-color: rgb(243, 243, 243);
     color: black;
 }
+/*Social media icons*/
+.fa {
+    padding: 20px;
+    font-size: 30px;
+    width: 30px;
+    text-align: center;
+    text-decoration: none;
+    border-radius: 50%;
+}
+
 /* ===== Scrollbar CSS ===== */
 /* Firefox */
 * {
     scrollbar-width: auto;
-    scrollbar-color: #060956 #ffffff;
+    scrollbar-color: #ff5a60 #212529;
 }
 
     /* Chrome, Edge, and Safari */
@@ -121,11 +131,11 @@ form {
     }
 
     *::-webkit-scrollbar-track {
-        background-color: rgb(4, 28, 50);
+        background: #212529;
     }
 
     *::-webkit-scrollbar-thumb {
-        background-color: rgb(6, 70, 99);
+        background-color: #ff5a60;
         border-radius: 10px;
-        border: 3px solid rgb(6, 70, 99);
+        border: 3px solid #ff5a60;
     }
