--- a/RwaApartments-Public/Views/Apartments/BrowseApartments.cshtml
+++ b/RwaApartments-Public/Views/Apartments/BrowseApartments.cshtml
@@ -1,5 +1,4 @@
-﻿@*@model RwaApartments_Public.Models.ViewModels.ApartmentsBrowserViewModel*@
-@using RwaApartmaniDataLayer.Repositories.Factories
+﻿@using RwaApartmaniDataLayer.Repositories.Factories
 @using RwaApartmaniDataLayer.Models
 @{
     ViewBag.Title = "Browse apartments";
@@ -54,8 +53,8 @@
 </div>
 
 @section Scripts{
-    @Scripts.Render("~/Scripts/jquery-3.6.0.min.js")
-    @Scripts.Render("~/Scripts/jquery-ui.js")
+    @*@Scripts.Render("~/Scripts/jquery-3.6.0.min.js")
+    @Scripts.Render("~/Scripts/jquery-ui.js")*@
     <script>
         $("#filterDropDownList").val("PLH");
         $("#statusDropDownList").val("avaliable");
