--- a/RwaApartments-Public/Views/Shared/_Layout.cshtml
+++ b/RwaApartments-Public/Views/Shared/_Layout.cshtml
@@ -22,17 +22,29 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    @*@if (HttpContext.Current.User.Identity.Name == "")
+                        {
+                            <li class="nav-item">
+                                @Html.ActionLink("Login", "Index", "Apartments", null, new { @class = "nav-link" })
+                            </li>
+                        }*@
+                    <li class="nav-item">
+                        @Html.ActionLink("Apartments", "BrowseApartments", "Apartments", null, new { @class = "nav-link white_link" })
+                    </li>
+                    <li class="nav-item">
+                        <a href="nocando" class="nav-link">Contact</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="nocando" class="nav-link">About us</a>
+                    </li>
+                </ul>
+                <ul class='navbar-nav d-flex'>
                     @if (HttpContext.Current.User.Identity.Name == "")
                     {
                         <li class="nav-item">
                             @Html.ActionLink("Login", "Index", "Apartments", null, new { @class = "nav-link" })
                         </li>
                     }
-                    <li class="nav-item">
-                        @Html.ActionLink("Apartments", "BrowseApartments", "Apartments", null, new { @class = "nav-link white_link" })
-                    </li>
-                </ul>
-                <ul class='navbar-nav d-flex'>
                     @if (HttpContext.Current.User.Identity.Name != "")
                     {
                         <li class="nav-item" style="margin-right:.5rem">
